# SmartFlow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  new.md  package-lock.json  package.json
scripts/: build-release.ps1  generate-icon.ps1  publish-github.ps1  run-release.ps1
smartflow-cli/: Cargo.toml
smartflow-cli/src/: main.rs
smartflow-core/: Cargo.toml  config.example.json5
smartflow-core/src/: auth.rs  config.rs  main.rs  model.rs  process.rs  state.rs  watcher.rs
smartflow-core/src/api/: mod.rs
smartflow-core/src/engine/: api_hook.rs  mod.rs  proxifyre.rs  wfp.rs  windivert.rs
smartflow-ui/src-tauri/: Cargo.toml  tauri.conf.json
smartflow-ui/src-tauri/src/: auth.rs  main.rs
