[package]
name = "smartflow-core"
version = "0.2.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
directories = "5.0"
json5 = "0.4"
once_cell = "1.20"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp"
] }
