[package]
name = "smartflow-ui"
version = "0.2.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
tauri = { version = "1.8", features = ["api-all", "system-tray"] }
